# uqm

./: AUTHORS  BUGS  COPYING  ChangeLog  Contributing  HACKING  INSTALL  INSTALL.macosx  INSTALL.mingw  INSTALL.msvc  INSTALL.symbian  Makefile.am  Makefile.build  Makeinfo  Makeproject  README  TODO  WhatsNew  autogen.sh  build-nacl.sh  build.sh  build.vars.in  clean.sh  configure.ac  fixcrlf  subst  uqm.lsm
src/: Makefile.am  Makeinfo  SDL_wrapper.c  SDL_wrapper.h  config.h  config.h.in  config_unix.h.in  config_vc6.h  config_win.h.in  endian.h  endian_uqm.h  gl.h  options.c  options.h  port.c  port.h  starcon2.c  trackplayer.c  types.h  uqm.c  uqmversion.h  version.h
src/..\build\msvc6/: UrQuanMasters.dsp
src/abxadec/: Makefile  abxaud.c  abxaud.h
src/darwin/: Makeinfo  SDLMain.h  SDLMain.m
src/getopt/: Makeinfo  getopt.c  getopt1.c
src/libs/: Makeinfo  cdplib.h  compiler.h  declib.h  file.h  gfxlib.h  inplib.h  mathlib.h  md5.h  memlib.h  misc.h  net.h  reslib.h  sndlib.h  strlib.h  tasklib.h  threadlib.h  timelib.h  uio.h  uioutils.h  unicode.h  vidlib.h
src/libs/callback/: Makeinfo  alarm.c  alarm.h  async.h  callback.c  callback.h
src/libs/cdp/: Makeinfo  cdp_iio.h  cdpint.h  cdpmod.h
src/libs/decomp/: lzdecode.c  lzencode.c
src/libs/file/: dirs.c  temp.c
src/libs/graphics/: Makeinfo  clipline.c  cmap.c  cmap.h  context.c  context.h  dcqueue.c  display.h  drawable.c  drawable.h  drawcmd.h  font.c  font.h  frame.c  gfx_common.c  gfx_common.h  gfxload.c  intersec.c  loaddisp.c  prim.h  tfb_draw.c  tfb_draw.h  tfb_prim.c  tfb_prim.h  widgets.c  widgets.h
src/libs/graphics/sdl/: 2xscalers.c  3do_blt.c  3do_funcs.c  3do_getbody.c  Makeinfo  bbox.c  canvas.c  dcqueue.c  dcqueue.h  nearest2x.c  opengl.c  opengl.h  primitives.c  primitives.h  pure.c  pure.h  rndzoom.c  rotozoom.c  scalemmx.h  scalers.c  sdl_common.c  sdl_common.h  triscan2x.c
src/libs/heap/: heap.c
src/libs/input/: inpintrn.h  input_common.c
src/libs/log/: msgbox_stub.c  msgbox_win.c  uqmlog.c
src/libs/math/: random.h  random2.c
src/libs/memory/: w_memlib.c
src/libs/mikmod/: mdriver.c  mikmod_internals.h
src/libs/resource/: filecntl.c  getres.c  index.h  loadres.c  resinit.c
src/libs/sound/: audiocore.h  music.c  resinst.c  sfx.c  sndintrn.h  sound.c  sound.h  stream.c  stream.h  trackplayer.c  trackplayer.h
src/libs/strings/: Makeinfo  getstr.c  strings.c  unicode.c
src/libs/uio/: charhashtable.c  charhashtable.h  debug.c  gphys.h  hashtable.c  hashtable.h  io.c  io.h  match.h  uioport.h  uioutils.h  utils.c
src/libs/video/: dukvid.c  legacyplayer.c  video.c  video.h  videodec.c  videodec.h  vidintrn.h  vidplayer.c  vidplayer.h  vresins.c
src/msvc++/: Starcon2.dsp  Starcon2.dsw  UrQuanMasters.dsp  config.h
src/nacl/: Makeinfo  nacl_glue.cpp
src/regex/: regcomp.ci  regex.c  regex.h
src/res/: Makeinfo  UrQuanMasters.rc
src/res/darwin/: Info.plist  The Ur-Quan Masters.icns  uqm.r
src/res/nacl/: filesystem.js  index.html  uqm.css  uqm.html  uqm.js  uqm.nmf
src/sc2code/: Makefile.am  Makeinfo  appglue.h  battle.c  battle.h  battlecontrols.c  border.c  build.c  build.h  cleanup.c  clock.c  clock.h  cnctdlg.c  coderes.h  collide.c  collide.h  colors.h  comm.c  comm.h  commanim.c  commanim.h  commglue.c  commglue.h  confirm.c  cons_res.c  cons_res.h  controls.h  credits.c  credits.h  cyborg.c  debug.c  demo.c  displist.c  displist.h  dummy.c  dummy.h  element.h  encount.c  encount.h  flash.c  (+95 more)
src/sc2code/comm/: Makefile.am  commall.h
src/sc2code/libs/: Makefile.am  Makeinfo  compiler.h  declib.h  errlib.h  file.h  gfxlib.h  inplib.h  mathlib.h  memlib.h  misc.h  reslib.h  sndlib.h  strlib.h  threadlib.h  timelib.h  timlib.h  vargs.h  vidlib.h
src/sc2code/netplay/: FILES  checkbuf.h  checksum.c  checksum.h  crc.c  crc.h  nc_connect.ci  netconnection.c  netconnection.h  netmelee.c  netmelee.h  netmisc.c  netmisc.h  netoptions.c  netplay.h  netrcv.c  netsend.c  netstate.c  netstate.h  notify.c  packet.c  packet.h  packethandlers.c  packethandlers.h  packetq.c  packetq.h  packetsenders.c  packetsenders.h
src/sc2code/planets/: Makefile.am  Makeinfo  calc.c  cargo.c  devices.c  genburv.c  genchmmr.c  gencol.c  gendru.c  genilw.c  genmel.c  genmyc.c  genorz.c  genpet.c  genpku.c  genrain.c  gensam.c  genshof.c  gensly.c  gensol.c  genspa.c  gensup.c  gensyr.c  genthrad.c  gentopo.c  genutw.c  genvault.c  genvux.c  genwreck.c  genyeh.c  genzoq.c  lander.c  lander.h  lifeform.h  orbits.c  oval.c  pl_stuff.c  plandata.h  planets.c  planets.h  (+11 more)
src/sc2code/ships/: Makefile.am  ship.h
src/symbian/: bld.inf  config.h  icons_scalable_dc.mk  uqm-armv5.pkg  uqm-gcce.pkg  uqm.cfg  uqm.mmp  uqm.rss  uqm_reg.rss  uqmapp.cpp
src/uqm/: Makeinfo  battle.c  battle.h  battlecontrols.c  battlecontrols.h  build.c  build.h  cleanup.c  clock.c  clock.h  cnctdlg.c  cnctdlg.h  coderes.h  collide.h  colors.h  comm.c  comm.h  commanim.c  commanim.h  commglue.c  commglue.h  confirm.c  cons_res.c  cons_res.h  controls.h  credits.c  credits.h  cyborg.c  demo.h  displist.h  dummy.c  dummy.h  element.h  encount.c  encount.h  flash.c  flash.h  fmv.c  fmv.h  galaxy.c  (+79 more)
src/uqm/comm/: commall.h
src/uqm/netplay/: Makeinfo  checkbuf.c  checksum.c  checksum.h  netconnection.h  netinput.c  netinput.h  netmelee.c  netmelee.h  netmisc.c  netmisc.h  netplay.h  netsend.c  notify.h  notifyall.h  packet.h  packethandlers.c  packethandlers.h  packetsenders.c  packetsenders.h
src/uqm/planets/: Makeinfo  calc.c  cargo.c  devices.c  elemdata.h  genall.h  genburv.c  genchmmr.c  gencol.c  gendru.c  generate.h  genilw.c  genmel.c  genmyc.c  genorz.c  genpet.c  genpku.c  genrain.c  gensam.c  genshof.c  gensly.c  gensol.c  genspa.c  gensup.c  gensyr.c  genthrad.c  gentopo.c  genutw.c  genvault.c  genvux.c  genwreck.c  genyeh.c  genzoq.c  lander.c  lander.h  lifeform.h  orbits.c  oval.c  pl_stuff.c  plandata.h  (+11 more)
src/uqm/ships/: ship.h
src/uqm/supermelee/: Makeinfo  buildpick.c  buildpick.h  loadmele.c  loadmele.h  melee.c  melee.h  meleesetup.c  meleesetup.h  meleeship.h  pickmele.c  pickmele.h
(+9735 files in other folders)
